--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -123,6 +123,10 @@ tbody tr:last-child td {
     border-bottom: none;
 }
 
+.lista-processos table tbody tr:hover {
+    background-color: #f1f3f5; 
+  }
+
 /* Tags de UF */
 .tag-uf {
     background-color: #e9ecef;
